--- a/surprise.html
+++ b/surprise.html
@@ -81,7 +81,7 @@
 <body>
   <div class="confetti"></div>
   <h1>🎉 SURPRISEEEE!!! 🎉</h1>
-  <img class="cake" src="D:\web development\CSS\birthday\images\image7.jpg" alt="Birthday Cake">
+  <img class="cake" src="images\image7.jpg" alt="Birthday Cake">
   <p style="color: rgb(196, 84, 196); font-size: 1.2rem; max-width: 600px; padding: 0 20px;z-index: 3;">
     Wishing you the happiest, brightest, most magical birthday ever! You deserve all the joy today and always. Now go eat some cake! 🍰💖
   </p>
